--- a/denteez2/styles/styles.scss
+++ b/denteez2/styles/styles.scss
@@ -1,24 +1,23 @@
 .wrapper {
     width: 100%;
-    font-style: "Arial",sans-serif;
+    
     
     header {
         width: 100%;
         background-color: #87b448;
         border-bottom: 3px solid #71973c;
+        overflow: hidden;
+        min-width: 970px;
+        max-width: 1440px;
+        margin: 0 auto;
         
         nav {
             padding-left: 15px;
             padding-right: 15px;
             padding-top: 10px;
-            //max-width: 940px;
             width: 100%;
             height: 55px;
-            //margin: 0 auto;
-            overflow: hidden;
-            min-width: 970px;
-            max-width: 1440px;
-            margin: 0 auto;
+           
             
             .header__logo-wrap {
                 float: left;
@@ -38,9 +37,9 @@
                 
                 .user__wrap {
                     float:right;
-                    margin-left: -323px;//22%
-                    width: 323px;//22%
-                    margin-right: 1%;
+                    margin-left: -323px;
+                    width: 323px;
+                    margin-right: 2%;
                 
                     .chat {
                         float: right;
@@ -1034,7 +1033,7 @@
                                 width: 100%;
                                 margin: 0 auto;
                                 
-                                .column__center__block-search:nth-child(5n) {
+                                .column__center__block-search:nth-child(5n+1) {
                                     margin-right: 0;
                                 }
                                 
