add create denteez_dop_main

--- a/denteez__dop__main/styles/styles.css
+++ b/denteez__dop__main/styles/styles.css
@@ -245,8 +245,7 @@
       max-width: 1440px;
       min-width: 970px;
       height: 73px;
-      margin: 0 auto;
-      padding: 0 9.5%;
+      margin: 0 9.5%;
       letter-spacing: 0.1px;
       margin-top: 26px; }
     .wrapper footer .copyright {
