--- a/denteez__dop__main/styles/styles.scss
+++ b/denteez__dop__main/styles/styles.scss
@@ -363,8 +363,8 @@
             max-width: 1440px;
             min-width: 970px;
              height: 73px;
-            margin: 0 auto;
-            padding: 0 9.5%;
+            margin: 0 9.5%;
+            //padding: 0 9.5%;
             letter-spacing: 0.1px;
             margin-top: 26px;
         }
