--- a/denteez__dop__main/styles/styles.scss
+++ b/denteez__dop__main/styles/styles.scss
@@ -363,7 +363,7 @@
             max-width: 1440px;
             min-width: 970px;
              height: 73px;
-            margin: 0 9.5%;
+            margin: 0 auto;
             //padding: 0 9.5%;
             letter-spacing: 0.1px;
             margin-top: 26px;
@@ -373,6 +373,7 @@
             color:#b7bfcd;
             font: 12px "Arial",sans-serif;
             text-decoration: none;
+            margin-left: 5.5%;
         }
         
         .menu {
@@ -380,10 +381,11 @@
             margin: 0;
             width: 230px;
             padding: 0;
+            margin-right: 4%;
             .menu__item {
                 list-style: none;
                 float: left;
-                margin-right: 9.5%;
+                margin-right: 6.5%;
                 white-space: nowrap;     
                     overflow: hidden; 
                     text-overflow: ellipsis;
