add create3 footer denteez_dop_main

--- a/denteez__dop__main/styles/styles.scss
+++ b/denteez__dop__main/styles/styles.scss
@@ -381,7 +381,8 @@
             margin: 0;
             width: 230px;
             padding: 0;
-            margin-right: 4%;
+            margin: 0.7px 4.2% 0 0;
+            //margin-right: 4%;
             .menu__item {
                 list-style: none;
                 float: left;
