--- a/denteez__dop__main/styles/styles.scss
+++ b/denteez__dop__main/styles/styles.scss
@@ -140,7 +140,8 @@
             .input__name,
             .input__email,
             .input__input {
-                width: 100%;
+                width: 98%;// 100%;
+                padding-left: 2%;
                 border-radius: 6px;
                 height: 48.5px;
                 border: 1px solid #c8cdd5;
@@ -153,7 +154,8 @@
             }
             
             .input__subject {
-                width: 100%;
+                width: 98%;// 100%;
+                padding-left: 2%;
                 border-radius: 6px;
                 height: 50px;
                 border: 1px solid #c8cdd5;
@@ -176,11 +178,13 @@
           
             
             .input_new {
+                
                 margin-top: 16px;
             }
             
             .input__description {
-                width: 99.2%;
+                width: 97.2%;
+                padding-left: 2%;
                 resize: none;
                 border-radius: 6px;
                 height: 147px;
@@ -285,6 +289,10 @@
                     width: 100%;
                 }
             }
+            
+            
+            
+            
             
             
         }
