--- a/denteez2/styles/styles.scss
+++ b/denteez2/styles/styles.scss
@@ -8,15 +8,19 @@
         border-bottom: 3px solid #71973c;
         overflow: hidden;
         min-width: 970px;
-        max-width: 1440px;
+        width: 100%;
         margin: 0 auto;
         
         nav {
             padding-left: 15px;
             padding-right: 15px;
             padding-top: 10px;
-            width: 100%;
             height: 55px;
+            overflow: hidden;
+            min-width: 970px;
+            max-width: 1440px;
+            width: 100%;
+            margin: 0 auto;
            
             
             .header__logo-wrap {
