--- a/denteez__dop__main/styles/styles.css
+++ b/denteez__dop__main/styles/styles.css
@@ -1,15 +1,15 @@
 .wrapper {
   width: 100%; }
   .wrapper header {
-    width: 100%;
     height: 510px;
     background: url(../img/header__bg.png) no-repeat;
     background-size: cover;
-    margin: 0 auto; }
+    min-width: 970px;
+    margin: 0 auto;
+    width: 100%; }
     .wrapper header .header-wrap {
       width: 100%;
       overflow: hidden;
-      min-width: 970px;
       max-width: 1440px;
       margin: 0 auto; }
     .wrapper header .logo__wrap {
@@ -210,15 +210,17 @@
     height: 816px;
     background: url(../img/bg.png) no-repeat;
     background-size: cover;
+    max-width: 1440px;
+    min-width: 970px;
     overflow: hidden;
     margin: 0 auto; }
   .wrapper .about {
     width: 100%;
     overflow: hidden;
+    max-width: 1440px;
+    min-width: 970px;
     margin: 0 auto; }
     .wrapper .about .about__column-wrap {
-      min-width: 970px;
-      max-width: 1440px;
       margin: 0 auto;
       padding: 0 9.4%;
       margin-bottom: 89px; }
@@ -239,18 +241,31 @@
     .wrapper .about .about__column-right .text__about {
       letter-spacing: -0.3px; }
   .wrapper footer {
-    width: 100%;
+    /*width: 100%;
     height: 73px;
+    //overflow: hidden;
     margin: 0 auto;
     margin-top: 93px;
-    border-top: 1px solid #e0e2e6; }
+    border-top:1px solid #e0e2e6;*/
+    max-width: 1440px;
+    min-width: 970px;
+    width: 100%;
+    height: 73px;
+    margin: 93px auto 0;
+    border-top: 1px solid #e0e2e6;
+    overflow: hidden; }
     .wrapper footer .footer-wrap {
-      max-width: 1440px;
-      min-width: 970px;
+      /* max-width: 1440px;
+       min-width: 970px;
+        height: 73px;
+       margin: 0 auto;
+       //padding: 0 9.5%;
+       letter-spacing: 0.1px;
+       margin-top: 26px;*/
       height: 73px;
-      margin: 0 auto;
-      letter-spacing: 0.1px;
-      margin-top: 26px; }
+      margin: 26px auto 0;
+      width: 100%;
+      letter-spacing: .1px; }
     .wrapper footer .copyright {
       color: #b7bfcd;
       font: 12px "Arial",sans-serif;
