--- a/denteez__dop__main/styles/styles.scss
+++ b/denteez__dop__main/styles/styles.scss
@@ -3,15 +3,17 @@
     
 ///HEADER/////////////////////////////////////////    
     header {
-        width: 100%;
+       
         height: 510px;
         background: url(../img/header__bg.png) no-repeat;
         background-size: cover;
+        min-width: 970px;
         margin: 0 auto;
+         width: 100%;
         .header-wrap {
             width: 100%;
             overflow: hidden;
-            min-width: 970px;
+            //min-width: 970px;
             max-width: 1440px;
             margin: 0 auto;
             
@@ -304,8 +306,9 @@
         height: 816px;
         background: url(../img/bg.png) no-repeat;
         background-size: cover;
+        max-width: 1440px;
+        min-width: 970px;
         overflow: hidden;
-        //min-width: 970px;
         margin: 0 auto;
         
     }
@@ -313,12 +316,14 @@
     .about {
         width: 100%;
         overflow: hidden;
+        max-width: 1440px;
+        min-width: 970px;
         margin: 0 auto;
         
         .about__column-wrap {
             //display: inline-block;
-            min-width: 970px;
-            max-width: 1440px;
+            //min-width: 970px;
+            //max-width: 1440px;
             margin: 0 auto;
             padding: 0 9.4%;
             margin-bottom: 89px;
@@ -360,21 +365,33 @@
     }
 ////FOOTER////////////////////////////////////////////   
     footer {
-        width: 100%;
+        /*width: 100%;
         height: 73px;
         //overflow: hidden;
         margin: 0 auto;
         margin-top: 93px;
-        border-top:1px solid #e0e2e6;
+        border-top:1px solid #e0e2e6;*/
+        max-width: 1440px;
+        min-width: 970px;
+        width: 100%;
+        height: 73px;
+        margin: 93px auto 0;
+        border-top: 1px solid #e0e2e6;
+        overflow: hidden;
         
         .footer-wrap {
-            max-width: 1440px;
+           /* max-width: 1440px;
             min-width: 970px;
              height: 73px;
             margin: 0 auto;
             //padding: 0 9.5%;
             letter-spacing: 0.1px;
-            margin-top: 26px;
+            margin-top: 26px;*/
+            //overflow: hidden;
+            height: 73px;
+            margin: 26px auto 0;
+            width: 100%;
+            letter-spacing: .1px;
         }
         
         .copyright {
