add Radacode create2

--- a/Radacode/styles/styles.css
+++ b/Radacode/styles/styles.css
@@ -315,5 +315,11 @@ footer {
 @media screen and (min-width: 1467px) {
   header .banner .cat {
     left: 35%; } }
+@media screen and (min-width: 2300px) {
+  header .banner .cat {
+    left: 38%; } }
+@media screen and (min-width: 2800px) {
+  header .banner .cat {
+    left: 40%; } }
 
 /*# sourceMappingURL=styles.css.map */
