--- a/Radacode/styles/styles.scss
+++ b/Radacode/styles/styles.scss
@@ -17,7 +17,7 @@ header {
         width: 100%;
         overflow: hidden;
         max-width: 960px;
-        min-width: 768px;
+        min-width:320px; //768px;
         margin: 0 auto;
         padding-top: 15px;
         
@@ -77,7 +77,7 @@ header {
         width: 100%;
         overflow: hidden;
         max-width: 960px;
-        min-width: 768px;
+        min-width:320px;// 768px;
         margin: 0 auto;
         
         .banner__logo-wrap {
@@ -205,7 +205,7 @@ header {
         .content1__block {
             overflow: hidden;
             max-width: 960px;
-            min-width: 768px;
+            min-width:320px;// 768px;
             margin: 0 auto;
             padding-top: 35px;
             padding-bottom: 35px;
@@ -261,7 +261,7 @@ header {
         .content2__block {
             overflow: hidden;
             max-width: 960px;
-            min-width: 768px;
+            min-width:320px;// 768px;
             margin: 0 auto;
             padding-top: 35px;
             padding-bottom: 45px;
@@ -322,7 +322,7 @@ footer {
     .footer__block {
         overflow: hidden;
         max-width: 960px;
-        min-width: 768px;
+        min-width:320px;// 768px;
         margin: 0 auto;
         padding-top: 95px;
         
