--- a/Radacode/styles/styles.scss
+++ b/Radacode/styles/styles.scss
@@ -17,7 +17,7 @@ header {
         width: 100%;
         overflow: hidden;
         max-width: 960px;
-        min-width:320px; //768px;
+        min-width:320px;
         margin: 0 auto;
         padding-top: 15px;
         
@@ -31,9 +31,9 @@ header {
         
         .logo__link {
             display: block;
-            background: url(../img/logo1.png) no-repeat;
-            width: 145px;
-            height: 43px;
+            background-size: cover;
+            max-width: 100%;
+            height: auto;
         }
         
         .menu {
@@ -77,7 +77,7 @@ header {
         width: 100%;
         overflow: hidden;
         max-width: 960px;
-        min-width:320px;// 768px;
+        min-width:320px;
         margin: 0 auto;
         
         .banner__logo-wrap {
@@ -87,9 +87,6 @@ header {
         
         .banner__logo-link {
             display: block;
-            background: url(../img/logo2.png) no-repeat;
-            width: 512px;
-            height: 162px;
         }
         
         .cat {
@@ -99,56 +96,37 @@ header {
             .ct {
                 display: none;
                 position: relative;
-                background: url(../img/cat.png);
                 
             }
             .cat1 {
                 display: none;
-                background-position: 0 -30px;
-                top: -50px;
-                margin-left:75px;
-                width: 60px;
-                height: 50px;
+                top: -57px;
+                margin-left: 79px;
             }
             .cat2 {
                 display: none;
-                background-position: -90px 0;
-                margin-left:166px;
-                top: -130px;
-                width: 60px;
-                height: 50px;
+                margin-left: 169px;
+                top: -143px;
             }
             .cat3 {
                 display: none;
-                background-position: -190px -37px;
-                top: -147px;
-                margin-left:269px;
-                width: 60px;
-                height: 50px;
+                top: -165px;
+                margin-left: 267px;
             }
             .cat4 {
                 display: none;
-                background-position: -285px -81px;
-                width: 60px;
-                height: 60px;
-                margin-left:362px;
-                top: -152px;
+                margin-left: 368px;
+                top: -178px;
             }
             .cat5 {
                 display: none;
-                background-position: -315px -174px;
-                width: 60px;
-                height: 60px;
-                margin-left:392px;
-                top: -118px;
+                margin-left: 396px;
+                top: -151px;
             }
             .cat6 {
                 display: none;
-                background-position: -315px -257px;
-                margin-left: 391px;
-                top: -94px;
-                width: 60px;
-                height: 50px;
+                margin-left: 396px;
+                top: -130px;
             }
         }
         
@@ -157,7 +135,7 @@ header {
             margin-left: 11.5%;
             font: 36px 'Open Sans',sans-serif;
             letter-spacing: -0.99px;
-            
+            line-height: 1;
         }
         
         .text {
@@ -166,7 +144,7 @@ header {
             margin-left: 7.5%;
             letter-spacing: -0.38px;
             font:22px 'Open Sans',sans-serif;
-            
+            margin-top: 45px;
         }
         
         .txt-center {
@@ -174,7 +152,6 @@ header {
             margin-bottom: 0;
             margin-left: 2.3%;
             letter-spacing: -0.33px;
-            //line-height: 20em;
             font:22px 'Open Sans',sans-serif;
             line-height: 1.2;
         }
@@ -205,7 +182,7 @@ header {
         .content1__block {
             overflow: hidden;
             max-width: 960px;
-            min-width:320px;// 768px;
+            min-width:320px;
             margin: 0 auto;
             padding-top: 35px;
             padding-bottom: 35px;
@@ -226,12 +203,12 @@ header {
             }
             .content1__text {
                 text-align: center;
-                margin-top: 33px;
+                margin-top: 35px;
                 margin-left: 4.2%;
                 letter-spacing: 0.3px;
                 display: inline-block;
                 font: 22px 'Open Sans Light', sans-serif;
-                line-height: 27.9px;
+                line-height: 27.7px;
             }
         
         
@@ -242,12 +219,11 @@ header {
             left: -4%;
         
         }
-        .content1__img {
-            
-            background: url(../img/comp.png)no-repeat;
+
+        .img__comp {
             background-size: cover;
-            width: 465px;
-            height: 284px;
+            max-width: 465px;
+            height: auto;
         }
         
 }
@@ -261,10 +237,10 @@ header {
         .content2__block {
             overflow: hidden;
             max-width: 960px;
-            min-width:320px;// 768px;
+            min-width:320px;
             margin: 0 auto;
             padding-top: 35px;
-            padding-bottom: 45px;
+            padding-bottom: 82px;
         
         }
     
@@ -276,11 +252,10 @@ header {
             .content2__logo__link {
                 display: inline-block;
                 margin-left: 17%;
-                background: url(../img/logo3.png) no-repeat;
-                background-size: cover;
-                max-width: 301px;
-                width: 100%;
-                height: 91px;
+                img {
+                    max-width: 100%;
+                height: auto;
+                }
             }
         
         }
@@ -288,7 +263,7 @@ header {
         .content2__button__wrap {
             float: left;
             width: 50%;
-            margin-top: 67px;
+            margin-top: 64px;
             
             .buy {
                 height: 59px;
@@ -297,7 +272,7 @@ header {
                 color: black;
                 font: 30px 'Open Sans Light', sans-serif;
                 border: none;
-                margin-left: 33.8%;
+                margin-left: 34%;
             }
             .buy:hover {
                 -webkit-box-shadow: 2px 4px 39px 0px rgba(0,0,0,0.75);
@@ -322,7 +297,7 @@ footer {
     .footer__block {
         overflow: hidden;
         max-width: 960px;
-        min-width:320px;// 768px;
+        min-width:320px;
         margin: 0 auto;
         padding-top: 95px;
         
@@ -417,6 +392,39 @@ footer {
     
 }
 
+
+
+
+@media screen and (min-width:2800px) {
+     header {
+        .banner {
+            .cat {
+                left: 40%;
+            }  
+        } 
+    }
+}
+
+@media screen and (min-width:2300px) {
+    header {
+        .banner {
+            .cat {
+                left: 38%;
+            }   
+        }  
+    }  
+}
+
+@media screen and (min-width:1467px) {
+    header {
+        .banner {
+            .cat {
+                left: 35%;
+            }  
+        }   
+    }
+}
+
 @media screen and (min-width:1281px) {
     header {
         nav {
@@ -426,7 +434,8 @@ footer {
             max-width: 1440px;
             text-align: center;
             .cat {
-                left: 25%;
+                left: 200px;
+               
             }
             
             .banner__logo-wrap {
@@ -434,8 +443,6 @@ footer {
                 text-align: center;
             }
         }
-        
-        
     }
     
     .content1 {
@@ -456,46 +463,393 @@ footer {
     
 }
 
-@media screen and (min-width:1467px) {
-    
-     header {
-        
-        .banner {
-            .cat {
-                left: 35%;
-            }
-            
+
+
+@media screen and (min-width:625px) and (max-width:769px) {
+    header {
+         .banner {
+             .banner__logo-wrap {
+            margin-top: 15px;
+            margin-left: 0;
         }
         
-        
+        .banner__logo-link {
+            img {
+                width: 65%;
+            }
+        }
+    }
+  }
+}
+
+@media screen and (min-width:770px) and (max-width:959px) {
+    header {
+         .banner {
+             .cat {
+                 margin-left: 55%;
+                 .ct {
+                     img {
+                         width: 40px;
+                     }
+                 }
+                .cat1 {
+                    top: -50px;
+                    margin-left: 75px; 
+                 }
+                 .cat2 {
+                    margin-left: 146px;
+                    top: -130px;
+                     
+                 }
+                 .cat3 {
+                    top: -147px;
+                    margin-left: 229px;  
+                 }
+                 .cat4 {
+                    margin-left: 262px;
+                    top: -142px;   
+                 }
+                 .cat5 {
+                    margin-left: 292px;
+                    top: -118px;  
+                 }
+                 .cat6 {
+                    margin-left: 291px;
+                    top: -94px;
+                 }
+             }
+        }
+    }
+    
+}
+@media screen and (min-width:625px) and (max-width:769px) {
+     header {
+         .banner {
+             .cat {
+                 margin-left: 50%;
+                 .ct {
+                     img {
+                         width: 40px;
+                     }
+                 }
+                 .cat1 {
+                    top: -50px;
+                    margin-left: 90px;
+                     
+                 }
+                 .cat2 {
+                    margin-left: 140px;
+                    top: -110px;
+                     
+                 }
+                 .cat3 {
+                    top: -155px;
+                    margin-left: 190px;
+                     
+                 }
+                 .cat4 {
+                    margin-left: 230px;
+                    top: -159px;
+                     
+                 }
+                 .cat5 {
+                    margin-left: 255px;
+                    top: -150px;
+                     
+                 }
+                 .cat6 {
+                    margin-left: 255px;
+                    top: -138px;
+                     
+                 }
+                 
+             }
+             
+         }
+    }
+    
+}
+@media screen and (min-width:461px) and (max-width:624px) {
+    header {
+        .banner {
+            .cat {
+                margin-left: 50%;
+                .ct {
+                    img {
+                        width: 30px;
+                    }
+                }
+            .cat1 {
+                top: -50px;
+                margin-left: 85px;
+            }
+            
+            .cat2 {
+               margin-left: 120px;
+                top: -90px;
+            }
+            .cat3 {
+                top: -110px;
+                margin-left: 150px;
+            }
+            .cat4 {
+               margin-left: 175px;
+                top: -119px;
+            }
+            .cat5 {
+               margin-left: 195px;
+                top: -120px;
+            }
+            .cat6 {
+                margin-left: 195px;
+                top: -118px;
+            }
+        }
+      }
     }
     
 }
 
-@media screen and (min-width:2300px) {
-    
-     header {
+@media screen and (min-width:461px) and (max-width:959px) {
+header {
+    nav {
+        .menu__list__link {
+            padding: 2px;
+        }
+    }
         
-        .banner {
-            .cat {
-                left: 38%;
-            }   
+    .banner {
+        .banner__logo-wrap {
+            margin-top: 15px;
+            margin-left: 0;
+        }
+        
+        .banner__logo-link {
+            img {
+                width: 65%;
+            }
+        }
+        
+        .block__text {
+            width:80%;
+            margin-left: 5%;
+        }
+        
+        .h1 {
+            margin-left: 2%;
+            font-size: 22px;
+            text-align: center; 
+        }
+        
+        .text {
+            margin-top: 20px;
+            font-size: 18px;
+            display: inline;
+        }
+        
+        .txt-center,
+        .text2 {
+            font-size: 18px;
+            display: inline;
+        } 
+    }
+}
+.content1 {
+        .img__comp {
+            width: 100%;
+        }
+        .content1__text {
+            margin-top: 20px;
+         }
+}
+
+.content2 {
+        width: 100%;
+        background: #f5f9f7;
+        margin-top: 23px;
+        padding-bottom: 235px;
+        
+        .content2__block {
+            overflow: hidden;
+            max-width: 960px;
+            min-width:320px;
+            margin: 0 auto;
+            padding-top: 35px;
+            padding-bottom: 45px;
+        
+        }
+    
+        .content2__logo__wrap {
+            float: left;
+            width: 50%;
+            margin-top: 45px;
+        }
+    
+        .content2__button__wrap {
+            .buy {
+                margin-left: 10%;
+            }
+        }
+} 
+}
+
+@media screen and (min-width:320px) and (max-width:460px) {
+header {
+    nav {
+        .logo__link {
+            width: 100px;
+        }
+        .menu {
+            float: left;
+        }
+        
+        .menu__list__item:last-child,
+        .menu__list__item:nth-child(2),
+        .menu__list__item {
+            margin:0;
+        }
+        
+        .menu__list__link {
+            padding: 2px;
+        }
+ 
+    }
+        
+    .banner {
+        .banner__logo-wrap {
+            margin-top: 15px;
+            margin-left: 0;
+        }
+        
+        .banner__logo-link {
+            img {
+                width: 190px;
+            }
+        }
+        
+        .cat {
+            margin-left: 100px;
+            .ct {
+                    img {
+                        width: 20px;
+                    }
+                }
+            .cat1 {
+                top: -30px;
+                margin-left: 85px;
+            }
+            .cat2 {
+                margin-left: 105px;
+                top: -60px;
+            }
+            .cat3 {
+                top: -77px;
+                margin-left: 130px;
+            }
+            .cat4 {
+                margin-left: 155px;
+                top: -89px;
+            }
+            .cat5 {
+               margin-left: 175px;
+                top: -97px;
+            }
+            .cat6 {
+                margin-left: 175px;
+                top: -98px;
+            }
+        }
+        
+        .block__text {
+            width: 90%;
+            margin: 0 5%;
+        }
+        
+        .h1 {
+            margin-left: 2%;
+            font-size: 22px;
+            text-align: center; 
+        }
+        
+        .text {
+            margin-left: 1%;
+            margin-top: 20px;
+            font-size: 18px;
+            display: inline;
+        }
+        
+        .txt-center {
+            margin-left: 1%;
+            font-size: 18px;
+            display: inline;
+        }
+        
+        .text2 {
+            margin-left: 1%;
+            font-size: 18px;
+            display: inline;
+        }
+    }
+    
+}
+.content1 {
+        .content1__block__text {
+            width: 90%;
+        }
+        
+            
+        
+        .content1__img__wrp {
+            left: 0;
+            margin-left: 2%;
+            width: 96%;
+            img {
+                max-width: 100%;
+            }
         }  
-    }  
 }
-
-@media screen and (min-width:2800px) {
-    
-     header {
-        
-        .banner {
-            .cat {
-                left: 40%;
+.content2 {
+        .content2__logo__wrap {
+            width: 96%;
+            margin: 0 2%;
+            .content2__logo__link {
+                margin-left: 2%;
             }
             
         }
-        
+        .content2__button__wrap {
+            width: 96%;
+            margin: 0 2%;
+            .buy {
+                margin-left: 0;
+                margin: 10px 21%;
+            }
+        }
         
     }
     
+footer {
+    .footer__block {
+        padding-top: 50px;
+    }
+    .footer__menu {
+        width: 96%;
+        ul {
+            margin-left:0;
+        }
+    } 
+    
+    .footer__soc {
+        width: 96%;
+        margin: 0 2%;
+        margin-top: 20px;
+        ul {
+            padding-left: 10%;
+        }
+    }
 }
+}
+
+
+
+
