--- a/Radacode2/styles/styles.scss
+++ b/Radacode2/styles/styles.scss
@@ -392,39 +392,6 @@ footer {
     
 }
 
-
-
-
-@media screen and (min-width:2800px) {
-     header {
-        .banner {
-            .cat {
-                left: 40%;
-            }  
-        } 
-    }
-}
-
-@media screen and (min-width:2300px) {
-    header {
-        .banner {
-            .cat {
-                left: 38%;
-            }   
-        }  
-    }  
-}
-
-@media screen and (min-width:1467px) {
-    header {
-        .banner {
-            .cat {
-                left: 35%;
-            }  
-        }   
-    }
-}
-
 @media screen and (min-width:1281px) {
     header {
         nav {
@@ -434,7 +401,8 @@ footer {
             max-width: 1440px;
             text-align: center;
             .cat {
-                left: 200px;
+                //left: 200px;
+                margin-left: 700px;
                
             }
             
@@ -639,17 +607,19 @@ header {
             margin-left: 2%;
             font-size: 22px;
             text-align: center; 
+            margin-top: 10px;
+            margin-bottom: 20px;
         }
         
         .text {
             margin-top: 20px;
-            font-size: 18px;
+            font-size: 16px;
             display: inline;
         }
         
         .txt-center,
         .text2 {
-            font-size: 18px;
+            font-size: 16px;
             display: inline;
         } 
     }
@@ -769,26 +739,25 @@ header {
             margin-left: 2%;
             font-size: 22px;
             text-align: center; 
+            margin-top: 10px;
+            margin-bottom: 20px;
         }
         
         .text {
             margin-left: 1%;
             margin-top: 20px;
-            font-size: 18px;
+            font-size: 16px;
             display: inline;
         }
         
-        .txt-center {
-            margin-left: 1%;
-            font-size: 18px;
-            display: inline;
-        }
-        
+        .txt-center,
         .text2 {
             margin-left: 1%;
-            font-size: 18px;
+            font-size: 16px;
             display: inline;
         }
+        
+       
     }
     
 }
