--- a/Radacode2/styles/styles.scss
+++ b/Radacode2/styles/styles.scss
@@ -402,7 +402,42 @@ footer {
             text-align: center;
             .cat {
                 //left: 200px;
-                margin-left: 700px;
+                margin-left: 1000px;
+                .cat1 {
+                    top: -57px;
+    width: 70px;
+    margin-left: 20px;
+                }
+                .cat2 {
+                    margin-left: 99px;
+    width: 70px;
+    top: -143px;
+                    
+                }
+                .cat3 {
+                        top: -165px;
+    width: 70px;
+    margin-left: 167px;
+                    
+                }
+                .cat4 {
+                    width: 70px;
+    margin-left: 208px;
+    top: -178px;
+                    
+                }
+                .cat5 {
+                    width: 70px;
+    margin-left: 226px;
+    top: -151px;
+                    
+                }
+                .cat6 {
+                    margin-left: 200px;
+    width: 70px;
+    top: -130px;
+                    
+                }
                
             }
             
