add Cult1 create

--- a/Cult1/styles/jquery-ui.css
+++ b/Cult1/styles/jquery-ui.css
@@ -1322,3 +1322,9 @@ a.ui-button:active,
     width: 70%;
     }
 }
+@media only screen and (max-width: 450px) {
+    .ui-widget.ui-widget-content {
+    
+    width: 80%;
+    }
+}
