--- a/Cult1/styles/styles2.scss
+++ b/Cult1/styles/styles2.scss
@@ -18,22 +18,7 @@ header {
         font:22px 'Academia Roman', sans-serif;
     }
 }
-/*.online__button__wrap {
-    margin-top: 25px;
-    button {
-        background:#009bba;
-        height: 70px;
-        width: 90%;
-        border: none;
-        border-radius: 30px;
-        color: white;
-        font-size: 22px;
-    }
-    button:hover {
-        background:#b5d0e3; 
-        
-    }
-}*/
+
 
 /// END HEADER/////////////////////////
 ////////NAVIGATION/////////////////////
@@ -537,9 +522,23 @@ h2 {
     
 }
 @media only screen and (max-width : 699px) {
+    h2 {
+        font-size: 30px;
+    }
 .services {
     h3 {
         font-size: 18px;
+    }
+    .row {
+        .col-xs-3 {
+            width: 50%;
+        }
+    }
+    .services__block {
+        height: auto;
+        ul {
+            display: none;
+        }
     }
  }
 
@@ -581,12 +580,19 @@ footer {
 .services {
     .row {
         .col-xs-3 {
-            width: 50%;
+            width: 100%;
         }
     }
     
     .services__block {
-        height: 415px;
+        .services__img__wrap {
+            img {
+                max-width: 433px;
+                width: 100%;
+                height: auto;
+            }
+        }
+        //height: 415px;
     }
         
 }
@@ -603,7 +609,7 @@ footer {
     
      .online__button__wrap {
         button {
-            width: 38%;
+            width: 50%;
             font-size: 16px;
             height: 35px;
         }
@@ -614,12 +620,34 @@ footer {
 
 .services {
     .services__block {
-        height: 390px;
+        //height: 390px;
     }
         
 }
+footer {
+    .btn__online {
+        width: 50%;
+    }
+        
+    }
 }
 @media only screen and (max-width : 450px) {
+.price {
+    .table__price {
+        th {
+            font-size: 14px;
+            font-weight: bold;
+        } 
+        
+    }  
+        
+}
+.online {
+    .time__select {
+        width: 40%;
+    }
+        
+}
 footer {
     .row {
         .col-xs-8 {
@@ -635,6 +663,10 @@ footer {
         margin-left: 0;
         width: 100%;
         
+    }
+    
+    .footer-btn__text {
+        display: none;
     }
         
 }
@@ -653,16 +685,20 @@ footer {
     .online__button__wrap {
         top: 58%;
         button {
-            width: 45%;
-            font-size: 15px;
+            width: 60%;//45%;
+            //font-size: 15px;
         }
+        
+    }
+    .link__online {
+        font-size: 18px;
     }
         
 }
 
 .services {
     .services__block {
-        height: 370px;
+        //height: 370px;
     }
         
 }
@@ -671,6 +707,7 @@ footer {
     .btn__online {
         font-size: 14px;
     }
+    
         
 }
 }
