--- a/Cult1/styles/flexslider.css
+++ b/Cult1/styles/flexslider.css
@@ -73,8 +73,8 @@ html[xmlns] .flexslider .slides {
  * DEFAULT THEME
  * ====================================================================================================================*/
 .flexslider {
-  margin: 0 0 60px;
-    /*margin: 0;*/
+  /*margin: 0 0 60px;*/
+    margin: 0;
   background: #fff;
   border: 0;
   position: relative;
